Ghost button example and fix for child element vertical-align

--- a/src/style/components/_button.scss
+++ b/src/style/components/_button.scss
@@ -120,6 +120,10 @@
             &:active:enabled {
                 background: $grey-90-a20;
             }
+
+            & > * {
+                vertical-align: sub;
+            }
         }
     }
 
